--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
   "require": {
     "php": "^8.0",
     "imagine/imagine": "~1.3.2",
-    "fenom/fenom": ">=2.11.1",
+    "fenom/fenom": "^3.0.0",
     "cocur/slugify": "^2.3",
     "symfony/translation": "~4.1",
     "symfony/config": "~4.1",
